Adding contact info

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <p>Contact: gregory.schlomoff@gmail.com</p>
                     <p>Flow And Wonder is an interactive art installation created for Burning Man 2015. An 8 feet wide mushroom sculpture made of 40 machine-carved plywood panels illuminated by 1027 color LEDs, creating a beautiful surface where the light flows and dance. </p>
 
                     <img class="img-responsive" src="img/flow_and_wonder_day.jpg" alt="">
